--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.14",
         "axios": "^0.19",
         "cross-env": "^7.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "postcss": "^8.4.21",
         "resolve-url-loader": "^3.1.0",
+        "tailwindcss": "^3.2.7",
         "vue-loader": "^17.0.1"
     },
     "dependencies": {
